src/components/blogList.scss
main {
    max-width: 650px;
    margin: 0 auto;

    h5 {
        margin: 0;
    }
}

.blog-list {
  font-family: 'Raleway', sans-serif;
  font-weight: 400;

  a {
      text-decoration: none;
  }

  h2 {
    font-family: 'Raleway', sans-serif;
    font-weight: 900;
    color: #1d1d1d;
    margin: 8px 0;
  }

  .blog-list__meta small{
      margin-right: 32px;
      font-weight: 600;
  }
}

